# TabuSearch-PRVP

./: .gitignore  Busca_local.cpp  Busca_local.h  CMakeLists.txt  Caminho.cpp  Caminho.h  Instance.cpp  Instance.h  Makefile  Perturbacao.cpp  Perturbacao.h  Sol.cpp  Sol.h  Utils.cpp  Utils.h  local_search_patrulhamento  local_search_patrulhamento.cpp  my_program
Instancias/: 107_1_360_120_20.txt  107_2_360_120_20.txt  107_2_360_120_5.txt  107_5_360_120_20.txt  107_7_360_120_20.txt  10_1_360_120_20.txt  10_1_360_180_20.txt  10_1_360_360_20.txt  10_1_360_90_20.txt  16_1_360_120_20.txt  16_1_360_360_20.txt  16_1_360_90_20.txt  21_1_360_120_20.txt  21_1_360_180_20.txt  21_1_360_360_20.txt  21_1_360_90_20.txt  47_1_360_120_20.txt  47_2_360_120_20.txt  47_5_360_120_20.txt  47_7_360_120_20.txt  74_2_360_360_5.txt  94_2_360_360_5.txt  input12.txt  input16.txt  input18.txt  input23.txt  output_farol.txt  output_jatiuca.txt  output_onze.txt  output_royal.txt
resultados/: output_107_2_360_120_5.txt
resultados/Resultados Cond 1/: resultados_107_1_360_120_20.txt  resultados_107_2_360_120_20.txt  resultados_107_5_360_120_20.txt  resultados_107_7_360_120_20.txt  resultados_10_1_360_120_20.txt  resultados_10_1_360_180_20.txt  resultados_10_1_360_360_20.txt  resultados_10_1_360_90_20.txt  resultados_16_1_360_120_20.txt  resultados_16_1_360_180_20.txt  resultados_16_1_360_360_20.txt  resultados_16_1_360_90_20.txt  resultados_21_1_360_120_20.txt  resultados_21_1_360_180_20.txt  resultados_21_1_360_360_20.txt  resultados_21_1_360_90_20.txt  resultados_47_1_360_120_20.txt  (+3 more)
(+206 files in other folders)
